# cmake-playground

./: .gitmodules  CMakeLists.txt  ffi_generated.py.in
cmake/: FFI.cmake  ffi_generated.py.in
inc/: mathlib.h
src/: mathlib.c
